--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/subakaev/js-learning/issues"
   },
-  "homepage": "https://github.com/subakaev/js-learning#readme"
+  "homepage": "https://github.com/subakaev/js-learning#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1"
+  }
 }
