--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,10 +1,13 @@
 plugins:
   - babel
+  - jest
 
 env:
   node: true
+  jest: true
 
 parser: babel-eslint
 
 extends:
   - 'airbnb-base'
+  - 'plugin:jest/recommended'
