--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "eslint": "eslint",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "npm test -- --coverage"
   },
   "repository": {
     "type": "git",
@@ -32,5 +33,10 @@
     "jest": "^23.5.0",
     "jest-cli": "^23.5.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "jest": {
+    "coverageReporters": [
+      "lcov"
+    ]
+  }
 }
