--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,21 @@ language: node_js
 node_js:
   - node
 
+machine:
+  environment:
+    CC_TEST_REPORTER_ID: f0b7bbec2a4e378ebdb73fa82d3c72ab1bfcdf2c2496b8a14de189be59fb038b
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
 script:
   - make lint
   - make test
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+notifications:
+  email: false
