change jest configuration

--- a/package.json
+++ b/package.json
@@ -33,10 +33,5 @@
     "jest": "^23.5.0",
     "jest-cli": "^23.5.0"
   },
-  "dependencies": {},
-  "jest": {
-    "coverageReporters": [
-      "lcov"
-    ]
-  }
+  "dependencies": {}
 }
